--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
-pandas
-python-docx
-PyPDF2
-openpyxl
-xlrd
-xlsxwriter
-python-dotenv
-openai>=1.30.0
-tiktoken
-qdrant-client>=1.8,<2.0
+streamlit==1.40.2
+pandas==2.2.3
+python-docx==1.1.2
+PyPDF2==3.0.1
+openpyxl==3.1.5
+xlrd==2.0.1
+xlsxwriter==3.2.0
+python-dotenv==1.0.1
+openai==1.58.1
+tiktoken==0.8.0
+qdrant-client==1.12.1
 
